chore: коментарии в примере .env

--- a/example.env
+++ b/example.env
@@ -1,14 +1,16 @@
 LOGGING_LEVEL=INFO
-IS_DEBUG=1
+IS_DEBUG=0
 API_HOST=0.0.0.0
 API_PORT=8000
 
+# Если не нужен прокси, можно удалить
 HTTP_PROXY_SERVER=
 
 OPENAI_API_BASE=
 OPENAI_API_KEY=
 OPENAI_GPT_MODEL=
 
+# Если не нужно сохранять фото, можно удалить
 S3_ENDPOINT=
 S3_ACCESS_KEY=
 S3_SECRET_KEY=
